--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,5 +1,6 @@
 playlist_directory "~/.config/mpd/playlists"
 #pid_file           "~/.config/mpd/pid"
+buffer_time "100000"
 state_file         "~/.config/mpd/state"
 db_file            "~/.config/mpd/database"
 music_directory    "~/Music"
