--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -15,6 +15,8 @@ exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] steam 
 exec-once = [workspace 3 silent] discord
+exec-once = [workspace 9 silent] spotify
+exec-once = [workspace 10 silent] qbittorrent
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
