remake neovim config and some other tweaks

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,13 +4,13 @@
 #
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1,2560x1440@165,auto,auto,bitdepth,10,vrr,1
+monitor=DP-1,2560x1440@165,auto,1,bitdepth,10,vrr,2
 
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = waybar & dunst & hyprpaper
+exec-once = waybar & dunst & hyprpaper & udiskie --tray
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = [workspace 1 silent] firefox
 exec-once = [workspace 2 silent] steam 
@@ -70,7 +70,7 @@ decoration {
     blur {
         enabled = true
         size = 3
-        passes = 2
+        passes = 3
     }
 
     drop_shadow = yes
@@ -125,7 +125,7 @@ device:epic-mouse-v1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, alacritty
+bind = $mainMod, Return, exec, wezterm
 bind = $mainMod SHIFT, C, killactive, 
 bind = , Print, exec, grimshot --cursor copy anything
 bind = $mainMod SHIFT, Q, exit, 
