add nvim-autopairs and keyboard to waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -113,6 +113,7 @@ gestures {
 misc {
     focus_on_activate = false
     disable_hyprland_logo = true
+    disable_splash_rendering = true
 }
 
 # Example per-device config
