switch to flameshot, make wezterm start a new process, vim cursor change

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -126,9 +126,9 @@ device:epic-mouse-v1 {
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Return, exec, wezterm
+bind = $mainMod, Return, exec, wezterm start --always-new-process
 bind = $mainMod SHIFT, C, killactive, 
-bind = , Print, exec, grimshot --cursor copy anything
+bind = , Print, exec, flameshot gui
 bind = $mainMod SHIFT, Q, exit, 
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, P, exec, wofi -i --show drun
