--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -134,7 +134,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, exec, wofi -i --show drun
 bind = , xf86audioraisevolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
 bind = , xf86audiolowervolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -10%
-bind = Ctrl Alt, L, exec, waylock
+bind = Ctrl Alt, L, exec, swaylock --color 000000
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
